@@ -1,5 +1,6 @@
 Revision history for HTML::StateTable
 
+          - Completes configurable updates of table and preferences
           - Display tags appended to cell content
           - Adds force limit and tag table roles
           - Adds Active and HighlightRow row traits
